--- a/themes/amg-orangify/partials/header.html
+++ b/themes/amg-orangify/partials/header.html
@@ -85,7 +85,7 @@
 		<a href="#contact" class="amg-floating-icon amg-modal-trigger">
 			<i class="glyphicon glyphicon-envelope"></i>
 		</a>
-		<a href="#contact" class="amg-floating-icon amg-modal-closer">
+		<a href="#contact" class="amg-modal-closer">
 			<i class="glyphicon glyphicon-remove"></i>
 		</a>
 		<div class="amg-floating-link amg-floating-email">
@@ -101,7 +101,7 @@
 		<a href="#hire" class="amg-floating-icon amg-modal-trigger">
 			<i class="glyphicon glyphicon-send"></i>
 		</a>
-		<a href="#hire" class="amg-floating-icon amg-modal-closer">
+		<a href="#hire" class="amg-modal-closer">
 			<i class="glyphicon glyphicon-remove"></i>
 		</a>
 		<div class="amg-floating-link amg-floating-email">
